--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "bootstrap": "^5.1.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "graphql": "^15.6.1",
     "vue": "^2.6.14",
+    "vue-apollo": "^3.0.8",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -19,6 +26,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "graphql-tag": "^2.12.5",
+    "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
