--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.12.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
